@@ -172,6 +172,12 @@ void show_help(void)
         "                                      by default. DESC (descending) forces\n"
         "                                      to sort files in descending order.\n"
         "\n"
+        "  UD_FRAGMENTATION_THRESHOLD          Set the fragmentation threshold,\n"
+        "                                      in percents. When the disk fragmentation\n"
+        "                                      level is below the specified value, all\n"
+        "                                      the disk processing jobs except of the\n"
+        "                                      MFT optimization will be not performed.\n"
+        "\n"
         "  UD_TIME_LIMIT                       When the specified time interval elapses\n"
         "                                      the job will be stopped automatically.\n"
         "                                      The following time format is accepted:\n"
